--- a/n1_os_only/Makefile
+++ b/n1_os_only/Makefile
@@ -7,10 +7,12 @@ NET=host-bridge
 FULLNAME=$(ORG)/$(REPO)
 
 build ::
+	echo "# started: " `date --iso-8601="seconds"` | tee $(LOGFILE)
 	docker build \
 		-t $(FULLNAME)  \
 		./  \
-		2>&1 | tee $(LOGFILE)
+		2>&1 | tee -a $(LOGFILE)
+	echo "# finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
 
 shell ::
 	docker run \
