--- a/n2_epics_base/Makefile
+++ b/n2_epics_base/Makefile
@@ -7,12 +7,12 @@ NET=host-bridge
 FULLNAME=$(ORG)/$(REPO)
 
 build ::
-	echo "# started: " `date --iso-8601="seconds"` | tee $(LOGFILE)
+	echo "# build started: " `date --iso-8601="seconds"` | tee $(LOGFILE)
 	docker build \
 		-t $(FULLNAME)  \
 		./  \
 		2>&1 | tee -a $(LOGFILE)
-	echo "# finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
+	echo "# build finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
 
 shell ::
 	docker run \
@@ -24,7 +24,9 @@ shell ::
 		/bin/bash
 
 push ::
-	docker push $(FULLNAME)
+	echo "# push started: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
+	docker push $(FULLNAME) 2>&1 | tee -a $(LOGFILE)
+	echo "# push finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
 
 net ::
 	docker network create \
