--- a/n3_synApps/Makefile
+++ b/n3_synApps/Makefile
@@ -1,16 +1,18 @@
 
 ORG=prjemian
-REPO=synapps-6.1
+REPO=synapps-6.1-2020.5
 LOGFILE=build-log.txt
 NET=host-bridge
 
 FULLNAME=$(ORG)/$(REPO)
 
 build ::
+	echo "# started: " `date --iso-8601="seconds"` | tee $(LOGFILE)
 	docker build \
 		-t $(FULLNAME)  \
 		./  \
-		2>&1 | tee $(LOGFILE)
+		2>&1 | tee -a $(LOGFILE)
+	echo "# finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
 
 shell ::
 	docker run \
@@ -22,7 +24,9 @@ shell ::
 		/bin/bash
 
 push ::
-	docker push $(FULLNAME)
+	echo "# push started: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
+	docker push $(FULLNAME) 2>&1 | tee -a $(LOGFILE)
+	echo "# push finished: " `date --iso-8601="seconds"` | tee -a $(LOGFILE)
 
 net ::
 	docker network create \
