--- a/v1.1/Makefile
+++ b/v1.1/Makefile
@@ -3,7 +3,7 @@
 build ::
 	make -C n1_os_only      $@
 	make -C n2_epics_base   $@
-# 	make -C n3_synApps      $@
+	make -C n3_synApps      $@
 # 	# make -C n4_areaDetector $@
 
 # push ::
